# nadc_tools

./: CMakeLists.txt  README.md  ToDo  VERSION  clean_up.sh  index.html  params.json
FRESCO/: CMakeLists.txt  adaguc_fresco.c  nadc_fresco.c  nadc_fresco_del_entry.c  nadc_fresco_wr_sql_meta.c  nadc_fresco_wr_sql_tile.c  nadc_rd_fresco.c  nadc_rd_nc_fresco.c  nadc_wr_nc_fresco.c
GOME/: CMakeLists.txt  KNOWN_BUGS  gome_lv1.c  gome_lv1_del_entry.c  gome_lv1_wr_sql_meta.c  gome_lv1_wr_sql_tile.c  gome_lv2.c  gome_lv2_del_entry.c  gome_lv2_wr_sql_meta.c  gome_lv2_wr_sql_tile.c
IMAP/: CMakeLists.txt  adaguc_imap_ch4.c  adaguc_imap_hdo.c  scia_del_entry_imap_ch4.c  scia_del_entry_imap_hdo.c  scia_imap_ch4.c  scia_imap_hdo.c  scia_rd_imap_ch4.c  scia_rd_imap_hdo.c  scia_rd_nc_ch4.c  scia_rd_nc_hdo.c  scia_wr_nc_ch4.c  scia_wr_nc_hdo.c  scia_wr_sql_ch4_meta.c  scia_wr_sql_ch4_tile.c  scia_wr_sql_hdo_meta.c  scia_wr_sql_hdo_tile.c
IMLM/: CMakeLists.txt  adaguc_imlm_co.c  adaguc_imlm_h2o.c  scia_del_entry_imlm_co.c  scia_del_entry_imlm_h2o.c  scia_imlm_co.c  scia_imlm_h2o.c  scia_rd_imlm.c  scia_rd_nc_co.c  scia_rd_nc_h2o.c  scia_wr_nc_co.c  scia_wr_nc_h2o.c  scia_wr_sql_co_meta.c  scia_wr_sql_co_tile.c  scia_wr_sql_h2o_meta.c  scia_wr_sql_h2o_tile.c
MERIS/: CMakeLists.txt  meris_fr1.c  meris_rr1.c  meris_rr2.c
SCIA/: CMakeLists.txt  scia_dmop.c  scia_lv0_del_entry.c  scia_lv0_match_state.c  scia_lv0_wr_sql_meta.c  scia_lv1_del_entry.c  scia_lv1_match_state.c  scia_lv1_nc.c  scia_lv1_wr_calls.inc  scia_lv1_wr_sql_aux.c  scia_lv1_wr_sql_meta.c  scia_nl0.c  scia_nl1.c  scia_nl2.c  scia_ol2.c  scia_ol2_del_entry.c  scia_ol2_match_state.c  scia_ol2_wr_sql_cld.c  scia_ol2_wr_sql_meta.c  scia_ol2_wr_sql_nfit.c
TOGOMI/: CMakeLists.txt  adaguc_togomi.c  nadc_rd_nc_togomi.c  nadc_rd_togomi.c  nadc_togomi.c  nadc_togomi_del_entry.c  nadc_togomi_wr_sql_meta.c  nadc_togomi_wr_sql_tile.c  nadc_wr_nc_togomi.c
TOSOMI/: CMakeLists.txt  adaguc_tosomi.c  nadc_rd_nc_tosomi.c  nadc_rd_tosomi.c  nadc_tosomi.c  nadc_tosomi_del_entry.c  nadc_tosomi_wr_sql_meta.c  nadc_tosomi_wr_sql_tile.c  nadc_wr_nc_tosomi.c
idl_progs/: CMakeLists.txt  cmp_scia_cal.pro  convert_to_runs.pro  defs_nadc.pro  get_lv0_det_size.pro  get_lv0_mds_collo.pro  get_lv0_mds_data.pro  get_lv0_mds_hk.pro  get_lv0_mds_state.pro  get_lv0_mds_time.pro  get_lv0_state_temp.pro  get_lv1_gome_spec.pro  get_lv1_mds_data.pro  get_lv1_mds_state.pro  get_lv1_mds_time.pro  get_scia_clusdef.pro  get_scia_level.pro  get_scia_mds1_data.pro  get_scia_mds1_wave.pro  get_scia_orbitphase.pro  get_scia_quality.pro  get_scia_roe_eclipse.pro  get_scia_roe_info.pro  get_sdmf_path.pro  get_sdmf_phasediff.pro  gome_lv1_free_fcd.pro  gome_lv1_pcd_pmd.pro  gome_lv1_rd_bdr.pro  gome_lv1_rd_fcd.pro  gome_lv1_rd_fsr.pro  gome_lv1_rd_pcd.pro  gome_lv1_rd_smbdr.pro  gome_lv1_rd_smcd.pro  gome_lv1_rd_sph.pro  gome_lv1_smcd_pmd.pro  lib_name.pro  nadc_err_clear.pro  nadc_err_trace.pro  readbinarystructure.pro  scia_apply_memcorr.pro  (+113 more)
include/: CMakeLists.txt  _adaguc_def_var.inc  _connect_nadc_db.inc  _envi_pds_hdr.inc  _gome_check_sql_lv1b_name.inc  _scia_check_sql_lv1b_name.inc  _scia_get_sql_lv1b_name.inc  nadc_common.h  nadc_error.h  nadc_fresco.h  nadc_gome.h  nadc_idl.h  nadc_imap.h  nadc_imlm.h  nadc_meris.h  nadc_scia.h  nadc_scia_cal.h  nadc_scia_lv0.h  nadc_scia_lv1.h  nadc_scia_lv2.h  nadc_scia_patch.h  nadc_sdmf.h  nadc_togomi.h  nadc_tosomi.h  swap_bytes.h
libNADC/: CMakeLists.txt  VERSION  adaguc_init_param.c  adaguc_version.c  envi_get_dsd_index.c  envi_pds_dsd.c  envi_pds_info.c  envi_pds_mph.c  envi_wr_ascii_dsd.c  envi_wr_ascii_mph.c  nadc_akima.c  nadc_alloc.c  nadc_binsearch.c  nadc_bits.c  nadc_biweight.c  nadc_check_for_saa.c  nadc_copyright.c  nadc_date.c  nadc_error.c  nadc_ext_h5_array.c  nadc_file_equal.c  nadc_file_exists.c  nadc_file_size.c  nadc_files_equal.c  nadc_filesize.c  nadc_fit.c  nadc_flip.c  nadc_gettime.c  nadc_hdf5_api.c  nadc_info_screen.c  nadc_init_param.c  nadc_interpol.c  nadc_medfit.c  nadc_params.c  nadc_pytable_api.c  nadc_receivedate.c  nadc_select.c  nadc_sigmaclipped.c  nadc_string.c  nadc_usrindx.c  (+4 more)
libNADC_GOME/: CMakeLists.txt  VERSION  eval_poly.inc  gome_chk_size.c  gome_codecalib.c  gome_cre_h5_file.c  gome_h5_structs.c  gome_lv1_bdr.c  gome_lv1_cal_bdr.c  gome_lv1_cal_pmd.c  gome_lv1_pmd_geo.c  gome_lv1_rd_bdr.c  gome_lv1_rd_fcd.c  gome_lv1_rd_fsr.c  gome_lv1_rd_pcd.c  gome_lv1_rd_smcd.c  gome_lv1_rd_sph.c  gome_lv1_wr_ascii.c  gome_lv1_wr_h5_fcd.c  gome_lv1_wr_h5_pcd.c  gome_lv1_wr_h5_rec.c  gome_lv1_wr_h5_smcd.c  gome_lv1_wr_h5_sph.c  gome_lv2_rd_ddr.c  gome_lv2_rd_fsr.c  gome_lv2_rd_sph.c  gome_lv2_wr_ascii.c  gome_lv2_wr_h5_ddr.c  gome_lv2_wr_h5_irr.c  gome_lv2_wr_h5_sph.c  gome_param.c  gome_rd_pir.c  gome_select.c  gome_version.c  gome_wr_h5_pir.c  gome_wr_h5_version.c  version.h
libNADC_IDL/: CMakeLists.txt  VERSION  gome_lv1_idl.c  scia_cfi_idl.c  scia_gen_idl.c  scia_h5_idl.c  scia_lv0_idl.c  scia_lv1_idl.c  scia_lv2_idl.c  sdmf_h5_idl.c
libNADC_MERIS/: CMakeLists.txt  VERSION  meris_cre_h5_file.c  meris_param.c  meris_rd_sph.c  meris_rd_tie.c  meris_rr2_rd_mds_13.c  meris_rr2_rd_mds_14.c  meris_rr2_rd_mds_15.c  meris_rr2_rd_mds_16.c  meris_rr2_rd_mds_17.c  meris_rr2_rd_mds_18.c  meris_rr2_rd_mds_19.c  meris_rr2_rd_mds_20.c  meris_rr2_rd_sfgi.c  meris_rr2_rd_sqads.c  meris_version.c  meris_wr_ascii_sph.c  meris_wr_ascii_tie.c  meris_wr_h5_version.c
libNADC_SCIA/: .splintrc  CMakeLists.txt  VERSION  get_scia_clusdef.c  get_scia_lv0_mds.c  get_scia_lv0_mds_hk.c  get_scia_lv0_mds_info.c  get_scia_lv0c_mds.c  get_scia_lv1c_geo.c  get_scia_lv1c_mds.c  get_scia_lv1c_mean.c  get_scia_lv1c_pmd.c  get_scia_lv1c_polV.c  get_scia_magic_id.c  get_scia_mds_type.c  get_scia_quality.c  get_scia_roe_info.c  is_scia_lv1c.c  scia_clusDef.c  scia_codecalib.c  scia_codepatch.c  scia_cre_h5_file.c  scia_h5_structs.c  scia_lv0_h5_info.c  scia_lv0_mds_info.c  scia_lv0_pds_sph.c  scia_lv0_rd_mds.c  scia_lv0_select.c  scia_lv0_wr_ascii_info.c  scia_lv0_wr_ascii_mds.c  scia_lv0_wr_ascii_sph.c  scia_lv0_wr_h5_mds.c  (+110 more)
(+183 files in other folders)
